src/objects/Contract_Review__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Level_Required_Value__c</fullName>
        <label>Approval Level Required Value</label>
        <summarizedField>Contract_Conditions_Of_Approval__c.Level_of_Condition_value__c</summarizedField>
        <summaryForeignKey>Contract_Conditions_Of_Approval__c.Contract_Review_Request__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_Level_Required__c</fullName>
        <formula>CASE( Approval_Level_Required_Value__c , 1, &quot;Area&quot;, 2, &quot;Region&quot;, 3, &quot;Geography&quot;, 4, &quot;Group&quot;, 5, &quot;Enterprise&quot;,&quot;&quot;)</formula>
        <label>Approval Level Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If there are multiple business lines, pick the majority business line delivering the work.</inlineHelpText>
        <label>Business Line</label>
        <referenceTo>Business_Line__c</referenceTo>
        <relationshipLabel>Contract Reviews</relationshipLabel>
        <relationshipName>Contract_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Vendor_State_of_Incorporation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client/Vendor - State of Incorporation</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>State/Province/Emirate does not exist or does not match for the select country.</errorMessage>
            <filterItems>
                <field>State_Province_Emirate__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country_of_incorporation_of_the_client_v__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Contract Reviews (Client/Vendor - State of Incorporation)</relationshipLabel>
        <relationshipName>Contract_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project</description>
        <inlineHelpText>Client / Vendor name as exists in salesforce, leave blank if not in salesforce.</inlineHelpText>
        <label>Client / Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Reviews</relationshipLabel>
        <relationshipName>Contract_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_vendor_as_named_on_the_contract__c</fullName>
        <inlineHelpText>Client/vendor as named on the contract</inlineHelpText>
        <label>Client/vendor as named on the contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliant__c</fullName>
        <label>Compliant</label>
        <picklist>
            <picklistValues>
                <fullName>Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Compliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conditions_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditions complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <inlineHelpText>If there are multiple documents to review, please nominate the main contract type.</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>AECOM Inter-Company Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Standard (no deviations)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Standard with Deviations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ Industry Standard (AS4122, IPENZ/ACENZ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidentiality Agreement/ Deed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction / EPC Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deed Poll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorandum of Understanding/Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novation Deed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Provide in comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probity Deed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Contract/ Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Access Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Offer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subs Agreement (Non Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaming Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tender Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Agreement</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>Country__r.Country_Code__c</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Country where the project is managed.</inlineHelpText>
        <label>Country</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Country not available for selection</errorMessage>
            <filterItems>
                <field>Country__c.Country_Code__c</field>
                <operation>equals</operation>
                <value>CA,US,AU,NZ,BR,VE,MX,SP,ES,RO,GR,CZ,HU,AL,BA,BG,HR,CS,MK,ME,SI,IT,FR,PL,DE,AT,CH,BE,NL,LU,EE,LV,LT,DK,NO,SE,RU,AZ,TR,KZ,GE,UA,GB,IE,ZA,AE,BH,OM,IQ,QW,QA,IN</value>
            </filterItems>
            <filterItems>
                <field>Country__c.Country_Code__c</field>
                <operation>equals</operation>
                <value>DZ,AO,SH,KW,BW,SA,BI,CM,CV,CF,TD,KM,CG,AR,EG,GQ,ER,ET,GA,GM,GH,GW,GN,CI,KE,LS,LR,LY,MG,MW,ML,MR,MU,YT,MA,MZ,NA,NE,NG,ST,RE,RW,ST,SN,SC,SL,SO,SH,SD,SZ,TZ,TN,UG,CD,ZM,TZ,ZW,SS,CD,CN,TW,SG,ID,MY,TH,PH,MM,VN,LK</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contract Reviews</relationshipLabel>
        <relationshipName>Contract_Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_incorporation_of_the_client_v__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Country of incorporation of the client/vendor entity as it appears on the contract</description>
        <inlineHelpText>Country of incorporation of the client/vendor entity as it appears on the contract</inlineHelpText>
        <label>Client/Vendor - Country of Incorporation</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contract Reviews (Country of incorporation of the client/v)</relationshipLabel>
        <relationshipName>Contract_Reviews_client_country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Required__c</fullName>
        <defaultValue>Today() + 7</defaultValue>
        <description>Allow at least 7 days for your request to be reviewed. More time is needed should DOA approvals be required</description>
        <inlineHelpText>Allow at least 7 days for your request to be reviewed. More time is needed should DOA approvals be required</inlineHelpText>
        <label>Date Review is Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_received_by_Client__c</fullName>
        <label>Date received by Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Nature_of_Works__c</fullName>
        <inlineHelpText>Include a short paragraph describing the works we are doing for the Client</inlineHelpText>
        <label>Description &amp; Nature of Works</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The estimated Gross Fee of the project in the project currency</inlineHelpText>
        <label>Estimated Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Due_Date__c</fullName>
        <description>Date required by the Client</description>
        <inlineHelpText>Date required by the Client</inlineHelpText>
        <label>External Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Federal_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is designated for US federal contracts only</description>
        <inlineHelpText>This field is designated for US federal contracts only. Do not mark this field for Canadian federal contracts.</inlineHelpText>
        <label>US Federal Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; materials with guaranteed max / upset price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounted rate with success fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentivised fee structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – please describe in comments field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Folder_Referance_Name__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp;   Client_vendor_as_named_on_the_contract__c   &amp; &quot; - &quot; &amp;  Request_Name__c</formula>
        <inlineHelpText>Used to assist in creating a consistent folder naming conversion</inlineHelpText>
        <label>Folder Referance Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_No_Go_Status__c</fullName>
        <formula>TEXT(Opportunity_GNG__r.Decision__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go/No Go Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governing_Law__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Governing Law of the Contract - Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contract Reviews (Governing Law of the Contract)</relationshipLabel>
        <relationshipName>Contract_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Governing_Law_of_the_Contract_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Governing Law of the Contract - State</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>State/Province/Emirate does not exist or does not match for the select country.</errorMessage>
            <filterItems>
                <field>State_Province_Emirate__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Governing_Law__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Contract Reviews (Governing Law of the Contract State)</relationshipLabel>
        <relationshipName>Contract_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is project specific insurance being considered for this project?</inlineHelpText>
        <label>Project Insurance Contemplated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Reviewer_Comments__c</fullName>
        <inlineHelpText>The legal reviewers comments to project members, will appear on email when the review status changes.</inlineHelpText>
        <label>Legal Reviewer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Team__c</fullName>
        <description>Used for sharing rules only</description>
        <label>Legal Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitation_of_Liability__c</fullName>
        <label>Limitation of Liability</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Capped in Accordance with DoA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capped in Excess of DoA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncapped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>My_Contract__c</fullName>
        <description>A workaround to determine is user is a member of the request</description>
        <formula>IF(CreatedBy.Id  = $User.Id, 1, 0) + IF( Project_Manager__r.Id   = $User.Id, 1, 0)+ IF(  Project_Director__r.Id    = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ORM_Comments__c</fullName>
        <label>ORM Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_GNG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If an opportunity exists within Salesforce, please identify it and the following pages will be pre-filled for you.  If there is no Salesforce Opportunity created please leave blank.</inlineHelpText>
        <label>Opportunity (Go/No Go)</label>
        <referenceTo>Go_No_Go_Conversation__c</referenceTo>
        <relationshipLabel>Contract Reviews</relationshipLabel>
        <relationshipName>Contract_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity_GNG__r.Opportunity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The real opportunity, used for referancing</description>
        <inlineHelpText>Only accessible by full CRM users</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract Reviews</relationshipLabel>
        <relationshipName>Contract_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_project_member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An additional project member, eg RBLL</inlineHelpText>
        <label>Other project member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnersURL__c</fullName>
        <description>Get the URL to the owner weather it be a user or a queue</description>
        <formula>Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) &amp;  IF(LEFT( OwnerId , 3) = &quot;00G&quot;, &quot;_ui/common/ownership/group/GroupFullMembershipUi/d?id=&quot;,&quot;&quot;) &amp; OwnerId</formula>
        <label>OwnersURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Insurance_Amount__c</fullName>
        <description>Professional Indemnity/ Liability Amount</description>
        <inlineHelpText>Professional Indemnity/ Liability Amount</inlineHelpText>
        <label>Professional Indemnity/ Liability Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_Insurance_Amount__c</fullName>
        <description>Public / General Liability Amount</description>
        <inlineHelpText>Public / General Liability Amount</inlineHelpText>
        <label>Public / General Liability Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preferred_Contract_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To assign this request to a particular reviewer and bypass the queue. Will be assigned to the relevant legal group if left blank.</inlineHelpText>
        <label>Preferred Contract Reviewer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Legal__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Reviews_Preferred_Contract_Revi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previously_reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have the attached documents been previously reviewed through this process?  If YES, please provide relevant documents as attachments</inlineHelpText>
        <label>Previously reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project__r.Oracle_Project_Num__c</formula>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project name as exists in salesforce, leave blank if not in salesforce.</inlineHelpText>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.Oracle_Project_Num__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Contract Reviews</relationshipLabel>
        <relationshipName>Contract_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <formula>Client_Vendor__r.Registration_Business_Number__c</formula>
        <label>Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Name__c</fullName>
        <inlineHelpText>To be entered where project or opportunity are not within Salesforce.</inlineHelpText>
        <label>Project/Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Request_Type__c</fullName>
        <label>Review Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>High level review / holding statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detailed review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other-provide in comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <inlineHelpText>Refer to Project Delivery System (PDS) within the AECOM Integrated Management System (IMS).</inlineHelpText>
        <label>Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Legal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Nominate any other contract reviewers to be given access to this review if required.</inlineHelpText>
        <label>Second Legal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Reviews3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <inlineHelpText>List extracted from project profiles</inlineHelpText>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adv. Design/App. Research/Policy Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demolition/Decommissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design-Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design-Construct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental + Ecological Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Audits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Condition Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flood Mapping/Risk Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geospatial Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <formula>State_Province_Emirate__r.State_Code__c</formula>
        <label>State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_Emirate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>State/Province/Emirate only applies to the following countries (Australia, Canada, United Kingdom ,United States)</inlineHelpText>
        <label>State/Province/Emirate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>State/Province/Emirate does not exist or does not match for the select country.</errorMessage>
            <filterItems>
                <field>State_Province_Emirate__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>State_Province_Emirate__c.State_Code__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Contract Reviews</relationshipLabel>
        <relationshipName>Contract_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Review__c</fullName>
        <label>Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Submit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Complete - Subject to Negotiation or DOA Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved or Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Signed and Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdraw and Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the request has been submitted to the contract reviewers</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Reviewed__c</fullName>
        <label>Time Reviewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Submitted__c</fullName>
        <label>Time Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_To_Review__c</fullName>
        <formula>IF( NOT(ISBLANK(Time_Reviewed__c)) &amp;&amp; NOT(ISBLANK( Time_Submitted__c )), Time_Reviewed__c - Time_Submitted__c, NULL )</formula>
        <inlineHelpText>The number of days it took for the record to be reviewed after submission.</inlineHelpText>
        <label>Time To Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdraw__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag that the item is to be Withdrawn. When set the review status should change to &apos;Withdraw and close&apos;</description>
        <label>Withdraw</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>significant_risks_identified__c</fullName>
        <label>Significant risks identified</label>
        <picklist>
            <picklistValues>
                <fullName>Consequential losses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heightened Standard of Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability not tied to negligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidated damages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other risks/DoA triggers-add to comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsibility for Construction Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third party reliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfavorable commercial terms</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Contract Review Request</label>
    <listViews>
        <fullName>ACT</fullName>
        <columns>NAME</columns>
        <columns>State_Province_Emirate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LegacyId__c</columns>
        <columns>Request_Name__c</columns>
        <columns>Client_vendor_as_named_on_the_contract__c</columns>
        <columns>Date_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>State_Province_Emirate__c</field>
            <operation>equals</operation>
            <value>Australian Capital Territory</value>
        </filters>
        <label>ANZ - ACT</label>
        <language>en_US</language>
        <sharedTo>
            <group>Legal_ANZ</group>
        </sharedTo>
    </listViews>
</CustomObject>